syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hupu.msv.apm.network.governance";
import "governance/FallbackResult.proto";

//降级具体配置
message DegradeConfig {
    //规则id
    int64 id = 1;
    //是否启用
    int32 enabled = 2;
    //版本号
    int64 version = 3;
    //是否删除
    int32 delFlag = 4;
    //需要降级的路径
    string path = 5;
    //限流之后返回的结果
    Result result = 6;
}